# meal-mind

./: .env.example  .gitignore  DOCKER_SETUP.md  README.md  docker-compose.yml  init.sql  package-lock.json  package.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  pytest.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 29beecdf11b3_create_recipes_table.py  6942d77a42e3_create_categories_brands_ingredients_.py  a1fabd0c3c69_add_default_to_recipes_updated_at.py
apps/api/core/: config.py
apps/api/models/: __init__.py  brand.py  category.py  enums.py  ingredient.py  meal_plan.py  recipe.py  recipe_ingredient.py
apps/api/tests/: README.md  __init__.py  conftest.py  test_main.py
apps/api/tests/e2e/: __init__.py
apps/api/tests/fixtures/: __init__.py
apps/api/tests/integration/: __init__.py  conftest.py  schema_definitions.py  test_cascades.py  test_constraints.py  test_migrations.py  test_relationships.py
apps/api/tests/unit/: __init__.py
apps/api/tests/unit/services/: __init__.py
apps/frontend/: .dockerignore  .gitignore  Dockerfile  README.md  healthcheck.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/frontend/src/lib/: example.test.ts
apps/frontend/src/routes/: +page.svelte
apps/frontend/tests/: README.md
apps/frontend/tests/e2e/: example.spec.ts
supabase/: README.md  config.toml  seed.sql
