[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend service for MealMind - meal planning and nutrition management application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.116.1", "uvicorn>=0.35.0", "psycopg2-binary>=2.9.0"]

[dependency-groups]
dev = ["pytest>=8.0.0"]
